Refactor skip list